XWIKI-20411: Add automated test for "Name strategies automatic character replacement validation"
Fix the stable-17.10.x build after backporting this issue. The
flavor-test-docker module kept the master parent version 18.5.0-SNAPSHOT, so it
resolved xwiki-platform-test-docker:18.5.0-SNAPSHOT from the remote repository
(a frozen master snapshot without the standardFlavor attribute) instead of the
reactor's 17.10.10-SNAPSHOT build. Align it with the branch version. Also
replace List.getFirst() (a Java 21 API that does not compile on this Java 17
branch, introduced by the XWIKI-18260 backport) with get(0) in PageTypePicker
and TemplateProviderViewPage.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>